--- a/AllAboutSplinesCurvesAndNurbs(DX).csproj
+++ b/AllAboutSplinesCurvesAndNurbs(DX).csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="BasicStuff.cs" />
+    <Compile Remove="GameExCameraFog.cs" />
   </ItemGroup>
   <ItemGroup>
     <TrimmerRootAssembly Include="Microsoft.Xna.Framework.Content.ContentTypeReader" Visible="false" />
